--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,1 +1,10 @@
-$color_blue: blue;
+$color_blue: #678FF2;
+$color_white: #fff;
+$color_black: #000;
+
+$media_xxl: 1400px;
+$media_xl: 1200px;
+$media_lg: 992px;
+$media_md: 767px;
+$media_sm: 576px;
+$media_xs: 428px;
